DevTools: fix interception on both stages in old URLRequestJob-based impl

Also fix request-response-interception-disable-between.js which only used
to work because interception on both response and request did not.

Bug: 829595
Change-Id: I6e00c6b5a56e512d24fedc6369462376dddcbe3e
Reviewed-on: https://chromium-review.googlesource.com/999040
Reviewed-by: Dmitry Gozman <dgozman@chromium.org>
Commit-Queue: Andrey Kosyakov <caseq@chromium.org>
Cr-Commit-Position: refs/heads/master@{#548840}
Former-commit-id: 9ae2e567db93944e37b0cc14b4cea90b30a8388d